--- a/certificat.html
+++ b/certificat.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mes Certificats</title>
+    <link rel="icon" href="img/logo.png" title="logo">
+    <title>Darconex</title>
     <style>
         * {
             box-sizing: border-box;
@@ -69,6 +69,7 @@
     </style>
 </head>
 <body>
+<a href="https://darconex.github.io/" class="button-link">Menu</a>
     <div class="container">
         <h1>Mes Certificats</h1>
         
@@ -164,6 +165,118 @@
             </div>
 
             <!-- Certificat 10 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                            <!-- Certificat 11 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                            <!-- Certificat 12 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                            <!-- Certificat 13 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                            <!-- Certificat 14 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                            <!-- Certificat 15 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                            <!-- Certificat 16 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                            <!-- Certificat 16 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                            <!-- Certificat 17 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                            <!-- Certificat 18 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                            <!-- Certificat 19 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                            <!-- Certificat 20 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                            <!-- Certificat 21 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                                            <!-- Certificat 22 -->
+            <div class="certificat-card">
+                <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
+                <div class="certificat-content">
+                    <h2 class="certificat-title">Machine Learning</h2>
+                    <p class="certificat-details">Obtenu le : 23/03/2023<br>Organisation : Coursera</p>
+                    <p class="certificat-description">Compréhension des algorithmes de machine learning et de leurs applications.</p>
+                </div>
+                                                            <!-- Certificat 23 -->
             <div class="certificat-card">
                 <img src="chemin/vers/image_certificat10.jpg" alt="Certificat Image">
                 <div class="certificat-content">
