--- a/certificat.html
+++ b/certificat.html
@@ -85,40 +85,37 @@
     <div class="container">
         <a href="https://darconex.github.io/" class="button-link">Menu</a>
         <h1>Mes Certificats</h1>
-        
-        <div class="certificats-grid"><!-- Certificat 1 -->
+        <!-- Certificat 1 -->
+        <div class="certificats-grid">
             <div class="certificat-card">
-                <img src="chemin/vers/image_certificat1.jpg" alt="Certificat en Développement Web">
+                <img src="certificate/TEHTRIS/TEHTRIS_Data_Science.jpg" alt="Certificat TEHTRIS Data Science">
                 <div class="certificat-content">
-                    <h2 class="certificat-title">Développement Web</h2>
-                    <p class="certificat-details">Obtenu le : 15/03/2023<br>Organisation : OpenClassrooms</p>
-                    <p class="certificat-description">Compétences en HTML, CSS, et JavaScript pour créer des sites interactifs.</p>
+                    <h2 class="certificat-title">TEHTRIS Data Science</h2>
+                    <p class="certificat-details">Obtenu le : 31/01/2023<br>Organisation : TEHTRIS</p>
+                    <p class="certificat-description">Compétences en cybersécurité.</p>
                 </div>
             </div>
-
             <!-- Certificat 2 -->
             <div class="certificat-card">
-                <img src="chemin/vers/image_certificat2.jpg" alt="Certificat en Marketing Digital">
+                <img src="certificate/TEHTRIS/TEHTRIS_SOAR.jpg" alt="Certificat TEHTRIS SOAR">
                 <div class="certificat-content">
-                    <h2 class="certificat-title">Marketing Digital</h2>
-                    <p class="certificat-details">Obtenu le : 10/05/2022<br>Organisation : Google</p>
-                    <p class="certificat-description">Introduction aux bases du marketing en ligne et de la publicité numérique.</p>
+                    <h2 class="certificat-title">TEHTRIS SOAR</h2>
+                    <p class="certificat-details">Obtenu le : 31/01/2023<br>Organisation : TEHTRIS</p>
+                    <p class="certificat-description">Compétences en cybersécurité.</p>
                 </div>
             </div>
-
             <!-- Certificat 3 -->
             <div class="certificat-card">
-                <img src="chemin/vers/image_certificat3.jpg" alt="Certificat en Data Science">
+                <img src="certificate/TEHTRIS/TEHTRIS_UES.jpg" alt="Certificat TEHTRIS UES">
                 <div class="certificat-content">
                     <h2 class="certificat-title">Data Science</h2>
-                    <p class="certificat-details">Obtenu le : 21/06/2023<br>Organisation : Coursera</p>
-                    <p class="certificat-description">Maîtrise de l'analyse de données avec Python et outils de data science.</p>
+                    <p class="certificat-details">Obtenu le : 30/09/2022<br>Organisation : TEHTRIS</p>
+                    <p class="certificat-description">Compétences en cybersécurité.</p>
                 </div>
             </div>
-
             <!-- Certificat 4 -->
             <div class="certificat-card">
-                <img src="chemin/vers/image_certificat4.jpg" alt="Certificat en Gestion de Projet">
+                <img src="certificate/TEHTRIS/TEHTRIS_XDR.jpg" alt="Certificat TEHTRIS XDR">
                 <div class="certificat-content">
                     <h2 class="certificat-title">Gestion de Projet</h2>
                     <p class="certificat-details">Obtenu le : 05/09/2021<br>Organisation : PMI</p>
