--- a/certificat.html
+++ b/certificat.html
@@ -106,43 +106,41 @@
             </div>
             <!-- Certificat 3 -->
             <div class="certificat-card">
-                <img src="certificate/TEHTRIS/TEHTRIS_UES.jpg" alt="Certificat TEHTRIS UES">
+                <img src="certificate/TEHTRIS/TEHTRIS_UES_NIVEAU_2.jpg" alt="Certificat TEHTRIS UES NIVEAU 2">
                 <div class="certificat-content">
-                    <h2 class="certificat-title">Data Science</h2>
+                    <h2 class="certificat-title">TEHTRIS UES NIVEAU 2</h2>
                     <p class="certificat-details">Obtenu le : 30/09/2022<br>Organisation : TEHTRIS</p>
                     <p class="certificat-description">Compétences en cybersécurité.</p>
                 </div>
             </div>
             <!-- Certificat 4 -->
             <div class="certificat-card">
-                <img src="certificate/TEHTRIS/TEHTRIS_XDR.jpg" alt="Certificat TEHTRIS XDR">
+                <img src="certificate/TEHTRIS/TEHTRIS_XDR_NIVEAU_1.jpg" alt="Certificat TEHTRIS XDR NIVEAU 1">
                 <div class="certificat-content">
-                    <h2 class="certificat-title">Gestion de Projet</h2>
-                    <p class="certificat-details">Obtenu le : 05/09/2021<br>Organisation : PMI</p>
-                    <p class="certificat-description">Techniques de gestion de projets et méthodologies Agile et Scrum.</p>
+                    <h2 class="certificat-title">TEHTRIS XDR NIVEAU 1</h2>
+                    <p class="certificat-details">Obtenu le : 30/09/2022<br>Organisation : TEHTRIS</p>
+                    <p class="certificat-description">Compétences en cybersécurité.</p>
                 </div>
             </div>
-
             <!-- Certificat 5 -->
             <div class="certificat-card">
-                <img src="chemin/vers/image_certificat5.jpg" alt="Certificat en Python pour Data Science">
+                <img src="certificate/vade/Vade_for_M365_Administration.jpg" alt="Certificat Vade for M365 Administration">
                 <div class="certificat-content">
-                    <h2 class="certificat-title">Python pour Data Science</h2>
-                    <p class="certificat-details">Obtenu le : 02/12/2022<br>Organisation : Udemy</p>
-                    <p class="certificat-description">Utilisation de Python pour l'analyse et la visualisation de données.</p>
+                    <h2 class="certificat-title">Vade for M365 Administration</h2>
+                    <p class="certificat-details">Obtenu le : 11/01/2023<br>Organisation : Vade</p>
+                    <p class="certificat-description">Administration M365 Vade.</p>
                 </div>
             </div>
 
             <!-- Certificat 6 -->
             <div class="certificat-card">
-                <img src="chemin/vers/image_certificat6.jpg" alt="Certificat en UI/UX Design">
+                <img src="certificate/vade/Vade_for_M365_Secure_Cloud_Administration.jpg" alt="Vade Secure Cloud Administration">
                 <div class="certificat-content">
-                    <h2 class="certificat-title">UI/UX Design</h2>
-                    <p class="certificat-details">Obtenu le : 18/01/2023<br>Organisation : Interaction Design Foundation</p>
+                    <h2 class="certificat-title">Vade Secure Cloud Administration</h2>
+                    <p class="certificat-details">Obtenu le : 10/01/2023<br>Organisation : Vade</p>
                     <p class="certificat-description">Principes fondamentaux de design d'interface et d'expérience utilisateur.</p>
                 </div>
             </div>
-
             <!-- Certificat 7 -->
             <div class="certificat-card">
                 <img src="chemin/vers/image_certificat7.jpg" alt="Certificat en Intelligence Artificielle">
